fix overflow bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,6 @@ body {
   background-color: theme("colors.primary");
   font-family: "Oswald", sans-serif;
   font-family: "Roboto", sans-serif;
-  overflow-y: hidden;
+  overflow: hidden;
   overscroll-behavior: none;
 }
